reupload avec les modifs

--- a/object.html
+++ b/object.html
@@ -71,6 +71,7 @@
 	  			
 	  				<section>
 	  					<article>
+	  					<center>
 	  					<div class="row">		
 	  					<div class="col-md-3">
   				 		<h2>Rasperry</h2>
@@ -98,6 +99,7 @@
 	  					<a href="service.html"><h2>Bluetooth</h2></a>
 	  					</div>
 	  					</div>
+	  					</center>
   					</section>
   			</div>
   		
