point culture pret et finaliserx

--- a/definition.html
+++ b/definition.html
@@ -101,7 +101,24 @@
       <h3>robot chirugiens</h3>
     </div>
 </div>
-<center><iframe height="450px" width="550px" src="http://webdesobjets.fr/#JxhlHxeMpiSVMs9z.99">http://webdesobjets.fr/#JxhlHxeMpiSVMs9z.99</iframe></center>  
+
+  <div class="col-lg-12">
+  <center>
+    <h3>Google Glass, iWatch … Les objets connectés au service de la création de valeur pour les entreprises Montre (iWatch, Samsung Gear…) Balance (Balance connectée Withings …) Capteurs (Sommeil, santé, nutrition…) Lunettes (Google Glass …) Bracelet (Nike + Fuelband, Gear Fit …) Les objets connectés qui font le buzz</h3>
+    <p>Typologie des objet connectés (1) Les objets connectés au service de la création de valeur pour les entreprises Les objets « wearable » grand public • Personnels : Lunettes (Google Glass), Smartwatch (iWatch), Fourchettes (Hapifork), Sextoys (Durex), Surveillance des enfants (Belkin), Personnes âgées (ZCare), chiens-chats (Pet Remote) … • Santé : Mesure diabète, pression artérielle, ECG, stress, sommeil, indice UV, brosse à dents (Kolibree) et « Quantified self » (mesure des données personnelles) et Fitness (Adidas, Fitbit) … • Loisirs : Robots et drones (Parrot). Les objets « domotique » grand public • Domotique : Thermostats (Nest), Interrupteurs, électroménager, sécurité intrusion- incendie , météo, pot de fleur (Parrot). • Voiture : V2X (détection Vehicle to X), V2V (prévention des collisions).</p>
+     
+     <p>Typologie des objet connectés (2) Les objets « relais » • Routeurs / passerelles (Smart TV Box, Voiture connectée, smartphone, tablette), • Triggers/déclencheurs (Roximity) Les objets « entreprise » • Bornes de localisation d’objets (Sense). • Les objets techniques intégrés au produit : étiquette (suivi), électronique (gestion d’équipements). • Les objets « grand public » industrialisés (lunettes connectées, caméras). Les objets connectés au service de la création de valeur pour les entreprises</p>
+</center>
+    <center><iframe height="450px" width="550px" src="http://webdesobjets.fr/#JxhlHxeMpiSVMs9z.99">http://webdesobjets.fr/#JxhlHxeMpiSVMs9z.99</iframe></center>  
+  
+</div>
+<div class="col-sm-3">
+<center>
+<a href="object.html">retour</a>
+</center>
+</div>
+
+
 </div>
 </div>
 </body>
